<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium">

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_detail_food_cover_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_detail_food_cover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/food_detail_cover_height"
                android:layout_margin="@dimen/margin_small"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                tools:src="@drawable/bg_food" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_food_name"
            style="@style/FoodDetail.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/iv_detail_food_cover_container"
            app:layout_constraintStart_toStartOf="@+id/iv_detail_food_cover_container"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_food_cover_container"
            tools:text="@string/food_item_name" />

        <TextView
            android:id="@+id/tv_detail_food_owner"
            style="@style/FoodDetail.Owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_food_name"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_food_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_food_name"
            tools:text="@string/food_item_name" />

        <RelativeLayout
            android:id="@+id/rl_detail_food_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/bg_grey_light_half_rounded"
            android:padding="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_food_owner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_food_owner">

            <TextView
                android:id="@+id/tv_detail_food_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_toStartOf="@id/rb_detail_food_rating"
                android:background="@drawable/bg_rating_text"
                android:paddingHorizontal="@dimen/padding_very_small"
                android:paddingVertical="@dimen/padding_smallest"
                android:textColor="@color/grey"
                tools:text="3.6" />

            <RatingBar
                android:id="@+id/rb_detail_food_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                tools:rating="3.4" />

            <TextView
                android:id="@+id/tv_address_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rb_detail_food_rating"
                android:text="@string/address_headline_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_detail_food_address"
                style="@style/FoodDetail.Location"
                android:layout_width="@dimen/food_detail_location_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_address_headline"
                tools:text="@string/food_item_location" />

            <TextView
                android:id="@+id/tv_detail_food_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_detail_food_address"
                android:layout_alignBottom="@id/tv_detail_food_address"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:drawablePadding="@dimen/padding_small"
                android:gravity="center"
                android:textColor="@color/grey"
                app:drawableStartCompat="@drawable/ic_pin"
                tools:text="@string/food_item_distance" />

            <TextView
                android:id="@+id/tv_description_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_food_address"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/description_headline_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_detail_food_description"
                style="@style/FoodDetail.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description_headline"
                tools:text="@string/food_item_description" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_detail_food_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="end"
            android:text="@string/detail_total_order"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_food_subtract"
            app:layout_constraintTop_toBottomOf="@+id/rl_detail_food_container" />

        <Button
            android:id="@+id/tv_detail_food_subtract"
            android:layout_width="@dimen/detail_btn_width"
            android:layout_height="@dimen/detail_btn_height"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/detail_btn_subtract_text"
            android:textSize="24sp"
            app:backgroundTint="@color/pink_200"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_food_owner"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_food_total" />

        <Button
            android:id="@+id/tv_detail_food_add"
            android:layout_width="@dimen/detail_btn_width"
            android:layout_height="@dimen/detail_btn_height"
            android:layout_marginStart="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/detail_btn_add_text"
            android:textSize="24sp"
            app:backgroundTint="@color/pink_200"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_food_subtract"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_food_subtract" />

        <TextView
            android:id="@+id/tv_detail_food_cost"
            android:layout_width="0dp"
            android:layout_height="@dimen/detail_btn_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:background="@drawable/bg_grey_light_rounded"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_food_add"
            app:layout_constraintEnd_toEndOf="@+id/rl_detail_food_container"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_food_add"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_food_add"
            tools:text="@string/food_item_cost" />

        <Button
            android:id="@+id/btn_detail_food_cta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="16dp"
            android:paddingVertical="16dp"
            android:text="@string/detail_cta_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_food_cost"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_food_subtract"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_food_cost" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>