<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/creator_name">

            <ImageView
                android:id="@+id/iv_about_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_grey_rounded"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/bg_title_toolbar_height"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_title_toolbar" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:contentInsetEndWithActions="0dp"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_about_birtdate"
                style="@style/MyText.About.WithBackground.BirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/tv_about_work"
                style="@style/MyText.About.WithBackground.Job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_about_birtdate" />

            <TextView
                android:id="@+id/tv_about_email"
                style="@style/MyText.About.WithBackground.Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_about_work" />

            <TextView
                android:id="@+id/tv_about_sosial_media_headline"
                style="@style/MyText.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_about_email"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/about_social_media_headline" />

            <ImageView
                android:id="@+id/iv_about_linkedin"
                android:layout_width="@dimen/about_logo_size"
                android:layout_height="@dimen/about_logo_size"
                android:layout_alignTop="@id/iv_about_github"
                android:layout_toStartOf="@+id/iv_about_github"
                android:contentDescription="@string/app_name"
                android:src="@drawable/linkedin_logo" />

            <ImageView
                android:id="@+id/iv_about_github"
                android:layout_width="@dimen/about_logo_size"
                android:layout_height="@dimen/about_logo_size"
                android:layout_below="@id/tv_about_sosial_media_headline"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/margin_large"
                android:contentDescription="@string/app_name"
                android:src="@drawable/github_logo" />

            <ImageView
                android:id="@+id/iv_about_instagram"
                android:layout_width="@dimen/about_logo_size"
                android:layout_height="@dimen/about_logo_size"
                android:layout_alignTop="@id/iv_about_github"
                android:layout_toEndOf="@id/iv_about_github"
                android:contentDescription="@string/app_name"
                android:src="@drawable/instagram_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_about_github"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/copyright_text" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_likes"
        style="@style/MyButton.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_anchor="@id/app_bar_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>